tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Action_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Action_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user assigned to take action on this interaction. Only this user or the escalator can clear the flag.</description>
    <inlineHelpText>The person responsible for addressing this action item.</inlineHelpText>
    <label>Action Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Action Items</relationshipLabel>
    <relationshipName>Assigned_Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>