tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Completed_On__c</fullName>
    <label>Completed On</label>
    <description>DateTime when this note was completed/signed. Used to calculate 72-hour locking window.</description>
    <inlineHelpText>When the note was completed. Locking occurs 72 hours after this timestamp.</inlineHelpText>
    <type>DateTime</type>
</CustomField>