tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Description_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Services__c</fullName>
    <label>Description of Services</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Narrative description of services rendered. Used in CMS-1500 billing export and clinical documentation.</description>
</CustomField>