tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
    <description>The end time of the interaction summary / service session.</description>
</CustomField>