tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Interaction_Time__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Time__c</fullName>
    <label>Interaction Time</label>
    <type>Time</type>
    <description>Time of the interaction, captured from the home-screen quick-entry card.</description>
</CustomField>