tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Interpreter_Used__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Used__c</fullName>
    <label>Interpreter Used</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a language interpreter was used during this interaction. Used in BillingExportController to drive modifier selection on the CMS-1500 claim.</description>
</CustomField>