tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Interaction Summaries</relationshipLabel>
    <relationshipName>Interaction_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>