tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <label>Is Locked</label>
    <description>Indicates if this note is locked and cannot be edited (typically 72 hours after creation/completion).</description>
    <inlineHelpText>When locked, this note requires supervisor approval to amend.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>