tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Last_Amendment_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Amendment_By__c</fullName>
    <label>Last Amendment By</label>
    <description>User who made the most recent amendment to this locked note.</description>
    <referenceTo>User</referenceTo>
    <relationshipName>AmendedInteractionSummaries</relationshipName>
    <relationshipLabel>Amended Interaction Summaries</relationshipLabel>
    <type>Lookup</type>
</CustomField>