tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Locked_By__c.field-meta.xml
<CustomField>
    <fullName>Locked_By__c</fullName>
    <label>Locked By</label>
    <description>User or process that locked this note.</description>
    <referenceTo>User</referenceTo>
    <relationshipName>LockedInteractionSummaries</relationshipName>
    <relationshipLabel>Locked Interaction Summaries</relationshipLabel>
    <type>Lookup</type>
</CustomField>