tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Locked_On__c.field-meta.xml
<CustomField>
    <fullName>Locked_On__c</fullName>
    <label>Locked On</label>
    <description>DateTime when this note was locked from editing.</description>
    <inlineHelpText>Timestamp when this note was locked (72 hours after completion).</inlineHelpText>
    <type>DateTime</type>
</CustomField>