tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Manager_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approval_Notes__c</fullName>
    <description>Notes from the manager when approving the co-signature</description>
    <inlineHelpText>Optional notes from the approving manager</inlineHelpText>
    <label>Manager Approval Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>