tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Manager_Approver__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The manager who needs to approve/co-sign this interaction. Auto-populated from the creator's manager.</description>
    <inlineHelpText>The manager assigned to review and approve this note.</inlineHelpText>
    <label>Manager Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Interactions Requiring Approval</relationshipLabel>
    <relationshipName>Interactions_Requiring_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>