tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Manager_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Manager_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates manager rejected the co-signature request</description>
    <inlineHelpText>True if the manager rejected this note</inlineHelpText>
    <label>Manager Rejected</label>
    <type>Checkbox</type>
</CustomField>