tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Manager_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Manager_Rejected_Date__c</fullName>
    <description>Date when the manager rejected this note</description>
    <inlineHelpText>Date when the co-signature was rejected</inlineHelpText>
    <label>Manager Rejected Date</label>
    <type>Date</type>
</CustomField>