tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Manager_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Manager_Rejection_Reason__c</fullName>
    <description>Reason provided when manager rejects the co-signature request</description>
    <inlineHelpText>Required reason when rejecting a co-signature request</inlineHelpText>
    <label>Manager Rejection Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>