tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Manager_Signed__c.field-meta.xml
<CustomField>
    <fullName>Manager_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the manager has reviewed and signed this interaction.</description>
    <inlineHelpText>Checked when manager has approved this note.</inlineHelpText>
    <label>Manager Signed</label>
    <type>Checkbox</type>
</CustomField>