tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Manager_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Manager_Signed_Date__c</fullName>
    <description>Date when the manager signed/approved this interaction.</description>
    <inlineHelpText>The date manager approved this note.</inlineHelpText>
    <label>Manager Signed Date</label>
    <type>Date</type>
</CustomField>