tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Notify_Care_Team__c.field-meta.xml
<CustomField>
    <fullName>Notify_Care_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, bell notifications are sent to all Care Team members on the participant's active Case. Persists through follow-up child records.</description>
    <inlineHelpText>Check to notify the entire Care Team about this interaction.</inlineHelpText>
    <label>Notify Care Team</label>
    <type>Checkbox</type>
</CustomField>