tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Notify_Case_Manager__c.field-meta.xml
<CustomField>
    <fullName>Notify_Case_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Case Manager</label>
    <type>Checkbox</type>
</CustomField>