tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/PDF_File_Id__c.field-meta.xml
<CustomField>
    <fullName>PDF_File_Id__c</fullName>
    <description>ContentDocument ID of the most recently generated document for this record (set by docgen service at generation time)</description>
    <label>PDF File Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>