tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Clinical plan narrative for the interaction. Part of SOAP note structure (S=Subjective, O=Objective, A=Assessment, P=Plan).</description>
</CustomField>