tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/POS__c.field-meta.xml
<CustomField>
    <fullName>POS__c</fullName>
    <label>Place of Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Pharmacy</fullName>
            </value>
            <value>
                <fullName>02 - Telehealth</fullName>
            </value>
            <value>
                <fullName>03 - School</fullName>
            </value>
            <value>
                <fullName>04 - Shelter</fullName>
            </value>
            <value>
                <fullName>11 - Office</fullName>
            </value>
            <value>
                <fullName>12 - Home</fullName>
            </value>
            <value>
                <fullName>15 - Mobile Unit</fullName>
            </value>
            <value>
                <fullName>18 - Place of Employment / Worksite</fullName>
            </value>
            <value>
                <fullName>20 - Urgent Care Facility</fullName>
            </value>
            <value>
                <fullName>21 - Inpatient Hospital</fullName>
            </value>
            <value>
                <fullName>27 - Outreach Site / Street</fullName>
            </value>
            <value>
                <fullName>71 - Public Health Clinic</fullName>
            </value>
            <value>
                <fullName>72 - Rural Health Clinic</fullName>
            </value>
            <value>
                <fullName>99 - Other Place of Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>