tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Requires_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Manager_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this interaction requires the staff member's manager to co-sign before completion.</description>
    <inlineHelpText>Check this box if you need your manager to review and sign this note.</inlineHelpText>
    <label>Requires Manager Approval</label>
    <type>Checkbox</type>
</CustomField>