tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Response_and_Progress__c.field-meta.xml
<CustomField>
    <fullName>Response_and_Progress__c</fullName>
    <label>Response and Progress</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Client response and progress narrative for the interaction. Used in clinical documentation and billing export.</description>
</CustomField>