tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/SSRS_Assessment__c.field-meta.xml
<CustomField>
    <fullName>SSRS_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SSRS Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Interaction Summaries</relationshipLabel>
    <relationshipName>Interaction_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>