tgthrProgramManagement/force-app/main/default/objects/InteractionSummary/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
    <description>The start time of the interaction summary / service session.</description>
</CustomField>